2016-06-27  Georg-Johann Lay  <avr@gjlay.de>

	Use new file avrtest.exp that holds common parts of the board
	description files.

	* dejagnuboards/atmega103-sim.exp:
	* dejagnuboards/atxmega128-sim.exp:
	* dejagnuboards/atmega128-sim.exp: Factor out common code to...
	* dejagnuboards/avrtest.exp: ...this new file.
	* dejagnuboards/atmega2560-sim.exp: New file.
	* dejagnuboards/atmega64-sim.exp: New file.
	* README: Adjust.

2016-06-27  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.h:  Don't use // comments.
	[!IN_AVRTEST]: Use __extension__ with enum outside of range of int.

2016-06-25  Georg-Johann Lay  <avr@gjlay.de>

	BUGFIX: Fix wrong decoding of 1st instruction if entry-point
	        is not 0x0.

	* load-flash.c (decode_flash): Decode first opcode from
	program.code_start, not from 0x0.

2014-11-13  Georg-Johann Lay  <avr@gjlay.de>

	Add call graph generation with -graph.
	New modules graph.c and perf.c.

	* perf.c: New file.
	* graph.c: New file.
	* Makefile: Add rules to graph.o, perf.o.
	* options.h (arch_t): Boolify.
	(options_t): Add s_<VAR> fields.
	* options.c (comma_list_to_array): New function
	* options.def (-syms): Remove.
	(-graph*): New options.
	* load-flash.c (load_symbol_string_table): Call
	set_elf_string_table, finish_elf_string_table.
	(load_to_flash): Provide emty string table if the executable does
	not have one.
	(decode_opcode): Set have_syscall[] on SYSCALL.
	* logging.c: Factor out performance meters to perf.c.  Factor out
	symbol handling to graph.c.
	* logging.h: Same.  And add include guards.
	(graph.h, perf.h): New includes.
	* perf.c: New file.
	* perf.h: New file.
	* graph.h: New file.
	* graph.c: New file.

2014-10-29  Georg-Johann Lay  <avr@gjlay.de>

	Remove dead -[no-]ticks option.

	* options.def (ticks): Remove.
	* options.c (USAGE): Adjust.

2014-10-29  Georg-Johann Lay  <avr@gjlay.de>

	Avoid unspecified order when reading GPRs.

	* avrtest.c (CPSE, AND, OR, EOR, CP, CPC, SUB, SBC): Apply get_reg